# ai-api-gateway-mvp

./: .env.aws  .gitignore  Dockerfile  Dockerfile.aws  Dockerfile.hf  README.md  README_HF.md  docker-compose.aws.yml  fastapi_text_search.py  generate_embeddings_local.py  load_test.py  pyproject.toml  requirements.txt
app/api/: fastapi_ai_search.py  fastapi_aws.py  fastapi_hf.py  fastapi_text_search.py
app/model/: data_model.py
app/test/: face_detector_api_using_facenet.ipynb  text_embedding_test.ipynb
aws-deploy/: DEPLOY_GUIDE.md  setup-server.sh  upload-images.sh
datalake/: test.txt
dev/face_embedding/: create_face_index.py  face_dataloader.py  face_detection.py  face_embedding_generation.py  face_search.py  open_search_client.py  single_image_processing.py
dev/image_embedding/: create_image_index.py  embedding_generation.py  image_batch_embedding.py  index_data.py  open_search_client.py  search.py
dev/text_embedding/: create_text_index.py  text_batch_embedding.py
frontend/: index.html  script.js  style.css
mlops/: Dockerfile
mlops/without_security/: README  docker-compose.yml  opensearch.ipynb  prometheus.yml  requirements.txt
mlops/without_security/dashboards/: dashboard.yml
model/: download_models.py
multimodal_search/: create_index.py
scripts/: benchmark_onnx.py  export_clip_onnx.py
