[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AI Search Engine"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",  # Whitespace before ':'
    "W503",  # Line break before binary operator
]

[tool.isort]
profile = "black"
line_length = 88